...
        android:text="@string/game_rules_title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textViewGameRule1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_rule_1"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
...
